# National-Security-Ontology-Engine

./: IMPLEMENTATION_PLAN.txt  README.md  package-lock.json
nsoe-api/src/: main.py
nsoe-api/src/auth/: dependencies.py
nsoe-api/src/db/: elasticsearch_client.py  kafka_client.py  neo4j_client.py
nsoe-api/src/nsoe_api/: __init__.py  main.py
nsoe-api/src/routes/: alerts.py  cases.py  entities.py  feedback.py  (+1 more)
nsoe-dashboard/: package-lock.json  package.json
nsoe-dashboard/src/: main.tsx
nsoe-edge/: config.sample.yaml  pyproject.toml
nsoe-edge/src/: main.py
nsoe-edge/src/buffer/: rocksdb_buffer.py
nsoe-edge/src/camera/: adapter.py
nsoe-edge/src/config/: remote_config.py
nsoe-edge/src/detection/: detector.py
nsoe-edge/src/health/: health_service.py
nsoe-edge/src/nsoe_edge/: __init__.py
nsoe-edge/src/producer/: kafka_producer.py
nsoe-edge/src/tracking/: tracker.py
nsoe-edge/tests/: test_buffer.py  test_tracker.py
nsoe-infra/: docker-compose.dev.yml
nsoe-infra/opa/: nsoe_policies.rego
nsoe-infra/prometheus/: prometheus.yml
nsoe-infra/vault/: vault-config.hcl  vault-init.sh
nsoe-intelligence-core/tests/: test_ingestion_idempotency.py
nsoe-ontology/: nsoe-core.ttl
nsoe-ontology/rules/: nsoe-swrl.ttl
nsoe-ontology/shapes/: nsoe-shacl.ttl
nsoe-pipelines/jobs/: basic_cep_alert_job.py  cctv_enrichment_job.py  cross_domain_cep_job.py  cyber_normalization_job.py
nsoe-pipelines/schemas/: alert_event.avsc  cyber_raw_event.avsc  edge_cctv_event.avsc  enriched_cctv_event.avsc  ontology_write_command.avsc  socmint_processed_event.avsc
(+30 files in other folders)
